# SDC-HANZE-2022

./: .gitignore  CMakeLists.txt  README.md  example.csv
.github/workflows/: test.yml
Other/: winguiauto.py
RDW_Python/: udp_drive.py
RDW_Python/RDWKartFiles/: controller.py  record.py
Utilities/: Recorder.py  RotateVideo.py
models/: cartpole-dqn.h5
src/: application.cpp  application.h  canprocess.cpp  canprocess.h  cvprocess.cpp  cvprocess.h  main.cpp  mediastream.h  process.h  screensource.h  videosource.h
src/ACControlPython/: controller.py  receive.py
src/Algorithms/PythonExamples/: epison-greedy.py  genetic.py  keras_reinforcement_cartpole.py  playcarracing.py  playcarracing_agent.py  qleanringdnn_keras.py  qlearning_taxi.py  qlearningtest.py
src/AsettoCorsa_python/: receive.py
src/CANController/: TaskScheduler.cpp  TaskScheduler.h  cancontroller.cpp  cancontroller.h
src/CANSocket/: cansocket.cpp  cansocket.h
src/ComputerVision/: cameracalibration.cpp  cameracalibration.hpp  computervision.cpp  computervision.h
src/ComputorVision/: computorvision.cpp  computorvision.h  logger.h
src/Logger/: csvlogger.h  logger.cpp  logger.h
src/Logger/Time/: time.h
src/MachineLearning/: GPU_info.py  README.md  TrainAC.py  model.cpp  model.h
src/MachineLearning/2DRacingGym/: 2dracinggym.py
src/MachineLearning/ACRacing/: AssettoCorsaEnv.py  PythonTestAC.py  PythonTrainAC.py  TestKart.cpp  TrainAC.py  my_testfile.py  rdwfixcsv.py  removeSky.py  testalbumentation.py  testfile.py
src/MachineLearning/ACRacing/Reinforcement Learning/: AssettoCorsaEnv.py  PythonRLTestAC.py  PythonRLTrainAC.py  RLTestAC.cpp
src/MachineLearning/ACRacing/Supervised Learning/: PythonSLTestRL.py  PythonSLTrainIRL.py  SelfDriveModel.py  TTAssenDataset.py  testmodel.py
src/MachineLearning/ACRacing/SupervisedLearning/: SL_self_drive_pipeline.py  SelfDriveModel.py  TTAssenDataset.py  load_data.py  test_dataloader.py  transforms.py
src/MachineLearning/CANRacing/SupervisedLearning/: GradCAMvisualization.py  SL_self_drive_pipeline.py  SelfDriveModel.py  TTAssenDataset.py  fix_csv_values.py  gradCAM.py  load_data.py  python_deploy_model_irl.py  requirements.txt  rwdfixcsv.py  save_traced_model.py  save_traced_model_selfdrivemodel.py  split_bochten_recht.py  split_train_val.py  tbprep.py  tensorboard_visualize.py  tensorboardfuncs.py  transforms.py  utilities.py  visualize_actions.py  visualize_predictions.py
src/MachineLearning/Other/: keras_shower_example.py
src/MachineLearning/Other/2DRacing/: 2dracing.py
src/MachineLearning/Other/CarRacingExamples/: rl_carracing_example.py
src/MachineLearning/SupervisedLearning/: GradCAMvisualization.py  README.md  SL_self_drive_pipeline.py  SelfDriveModel.py  TTAssenDataset.py  load_data.py  python_deploy_model_irl.py  requirements.txt  save_traced_model_selfdrivemodel.py  tensorboard_visualize.py  transforms.py  utilities.py  visualize_actions.py
src/Managers/: VehicleControlManager.cpp  VehicleControlManager.h  mediamanager.cpp  mediamanager.h  vehiclecontrolmanager.cpp  vehiclecontrolmanager.h
src/Math/: Polynomial.cpp  Polynomial.h
src/MediaCapture/: CameraCapture.cpp  CameraCapture.h  MediaCapture.cpp  MediaCapture.h  VidCapture.cpp  VidCapture.h  mediaCapture.cpp  mediaCapture.h  mediacapture.cpp  mediacapture.h  screenCaptureLinux.cpp  screenCaptureLinux.h  screenCaptureWindows.cpp  screenCaptureWindows.h
src/MediaLoader/: captureScreen.cpp  captureScreen.h  mediaLoader.cpp  mediaLoader.h  screenshot.cpp
src/MediaSources/: mediasource.h  screensource.cpp  screensource.h  streamsource.h  videosource.cpp  videosource.h
src/PID/: PID.cpp  PID.h
src/Processes/: canprocess.cpp  canprocess.h  cvprocess.cpp  cvprocess.h  process.h  readprocess.cpp  readprocess.h  terminalprocess.cpp  terminalprocess.h
src/PythonExamples/: genetic.py  keras_reinforcement_taxi.py  playcarracing_human.py  qlearningtest.py
src/SDC Files/: gas.py  record.py  stuur.py
src/TestEnvironment/: udp_drive.cpp  udp_drive.h
src/VehicleControl/: CANBus.h  CommunicationStrategy.h  communicationstrategy.h
src/VehicleControl/strategies/: ACStrategy.cpp  ACStrategy.h  CANStrategy.cpp  CANStrategy.h  VCANStrategy.h  acstrategy.cpp  acstrategy.h  canstrategy.cpp  canstrategy.h
src/camera/: cameraCapture.cpp  cameraCapture.h
src/drive-controls/: brake.cpp  brake.h  gas.cpp  gas.h  record.cpp  record.h  steer.cpp  steer.h
src/logger/: logger.cpp  logger.h
src/mediaCapture/: mediaCapture.cpp  mediaCapture.h
src/racinggame/: main.py
src/sub/: Test.cpp  Test.h
src/utils/TaskScheduler/: CANMessageTask.cpp  CANMessageTask.h  MessageTask.cpp  MessageTask.h  TaskScheduler.cpp  TaskScheduler.h
src/utils/Time/: time.cpp  time.h
temp/AsettoCorsa_python/: controller.py  receive.py  udp_drive.py
temp/RDW Files/: controller.py  rem.py
temp/SDC Files/: controller.py
temp/SDC Files/AsettoCorsa_python/: controller.py  receive.py
tests/: CMakeLists.txt  UnitTests.cpp
(+69 files in other folders)
